[project]
name = "squinch-qa"
version = "0.1.0"
description = "QA planner for squinchmods"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6",
    "jsonschema>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squinch_qa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
filterwarnings = [
    # models.py uses 'TestSpec' / 'TestDef' names; pytest tries to collect them as test classes
    "ignore::pytest.PytestCollectionWarning",
]
markers = [
    "slow: marks tests as slow (subprocess-heavy); deselect with '-m \"not slow\"'",
]
